Bug 156028 - Background color is lost after import.
Summary: Background color is lost after import.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-23 06:56 UTC by NISZ LibreOffice Team
Modified: 2023-06-29 11:11 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample file (7.99 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2023-06-23 06:57 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-06-23 06:56:44 UTC
Description:
I created a document in MSO than opened it in Libfre office, the background color of the cell is lost.

Steps to Reproduce:
1. Open the attached documentum in LO
2. Open the attached document in MSO
3. Compaire the difference.

Actual Results:
The background color of the cell is lost.

Expected Results:
The background color of the cell isn't lost.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 986c2d86a7b53a6599d014db7327f47cb33d4fea
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-06-23 06:57:06 UTC
Created attachment 188062 [details]
Sample file
Comment 2 ady 2023-06-23 12:18:11 UTC
In attachment 188062 [details], there seems to be some conditional format on cells/range A1:C1, so perhaps this is not about background color but rather about the specific conditional format (color scale 3 entries).
Comment 3 ady 2023-06-23 12:20:24 UTC
(In reply to ady from comment #2)
> In attachment 188062 [details], there seems to be some conditional format on
> cells/range A1:C1, so perhaps this is not about background color but rather
> about the specific conditional format (color scale 3 entries).

Add a 0 (zero) in cell A1 and the colors are displayed.
Comment 4 Commit Notification 2023-06-27 12:10:03 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e0537a6e746db6ea746af6b91f94aeb9d2b05d9

tdf#156028 sc: use color of the highest value if only one value

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-06-27 20:40:13 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/4c4d56f94b8f9598bd3d7cd60d38e18bf1e42857

tdf#156028 sc: use color of the highest value if only one value

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2023-06-29 11:11:15 UTC
Verified in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1b0aca6bf520626d3c9a1fac67cd2de2c10c78c
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded